--- a/bns/myapp/templates/myapp/account.html
+++ b/bns/myapp/templates/myapp/account.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h2>Edwin Chiu's Profile</h2>
 <!-- Create form with post method: url directed to /listing_submission/ -->
-<form class="account" action="/listing_submission/" method="post">
+<form class="account" action="/listing_submission/" method="POST">
     {% csrf_token %}
     {{ form|crispy }}
     <button type="submit" class="btn btn-primary">Submit Post!</button>
