--- a/bns/myapp/templates/myapp/header.html
+++ b/bns/myapp/templates/myapp/header.html
@@ -42,6 +42,12 @@
 				<li class="nav-item">
 					<a class="nav-link" href="/cart">Cart</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/login">Login</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/register">Register</a>
+				</li>
 			  </ul>
 			  <div class="input-group">
 				<input type="text" class="form-control" placeholder="Search for...">
