--- a/bns/myapp/templates/myapp/home.html
+++ b/bns/myapp/templates/myapp/home.html
@@ -6,6 +6,11 @@
     <center>
     <a href="/account"><button type="button-post" class="btn btn-primary">Add Post</button></a>
     <button type="button-filter" class="btn btn-primary">Filter</button>
+
+    {% for message in messages %}
+        <p id="messages"> {{ message }} </p>
+    {% endfor %}
+
     </center>
     <br>
 </div>
