--- a/bns/myapp/templates/myapp/register.html
+++ b/bns/myapp/templates/myapp/register.html
@@ -6,7 +6,8 @@
 <form class="register" method="POST">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">Create User!</button>
+    <br>
+    <button type="submit" class="btn btn-primary">Create User</button>
 </form>
 {% endblock %}
 
