--- a/bns/myapp/templates/myapp/header.html
+++ b/bns/myapp/templates/myapp/header.html
@@ -43,18 +43,19 @@
 					<a class="nav-link" href="/cart">Cart</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/login">Login</a>
-				</li>
-				<li class="nav-item">
 					<a class="nav-link" href="/register">Register</a>
 				</li>
 			  </ul>
-			  <div class="input-group">
+			  <div class="input-group" style="margin-right: 20px;">
 				<input type="text" class="form-control" placeholder="Search for...">
-				<span class="input-group-btn">
+				<span class="input-group-btn" >
 					<button class="btn btn-default" type="button"><b class="glyphicon glyphicon-search"></b></button>
 				</span>
-			</div>
+			  </div>
+			  <span style="margin-right: 5px;">Hello,</span>
+			  <span> {{ request.user }}</span>
+			  <a class="nav-link" href="/login">Login</a>
+			  <a href="/logout">Logout</a>
 			</div>
 		  </nav>
 		  
