--- a/bns/myapp/templates/myapp/account.html
+++ b/bns/myapp/templates/myapp/account.html
@@ -2,11 +2,26 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h2>Edwin Chiu's Profile</h2>
-<!-- Create form with post method: url directed to /listing_submission/ -->
-<form class="account" action="/listing_submission/" method="POST">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">Submit Post!</button>
-</form>
+    <div class="container-fluid" style="margin-top: 10px; background-color: #e3f2fd;">
+        <div class="media">
+            <img class="rounded-circle account-img resize" src=" {{ user.profile.image.url }} "style="margin: 5px 40px 0px 0px;
+            ">
+            <div class="media-body">
+                <h2 class="account-heading">{{ user.first_name }} {{ user.last_name }}</h2>
+                <p class="text-secondary">{{ user.email }}</p>
+                <p class="text-secondary">{{ user.profile.city }} {{ user.profile.states }} {{ user.profile.country }}</p>
+                <p class="text-secondary">{{ user.profile.bio }}</p>
+            </div>
+        </div>
+    </div>
+    <!-- Create form with post method: url directed to /listing_submission/ -->
+    <div class="container-fluid">
+        <h2 class="account-heading">Add New Listing</h2>
+        <form class="account" action="/listing_submission/" method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <br>
+            <button type="submit" class="btn btn-primary">Submit Post!</button>
+        </form>
+    </div>  
 {% endblock %}
