allow users to update profile info and added messages with some refactoring in views.py

--- a/bns/myapp/templates/myapp/home.html
+++ b/bns/myapp/templates/myapp/home.html
@@ -4,7 +4,7 @@
 <div>
     <br>
     <center>
-    <a href="/account"><button type="button-post" class="btn btn-primary">Add Post</button></a>
+    <a href="/addPost"><button type="button-post" class="btn btn-primary">Add Post</button></a>
     <button type="button-filter" class="btn btn-primary">Filter</button>
 
     {% for message in messages %}
