--- a/bns/shopping_cart/templates/shopping_cart/cart.html
+++ b/bns/shopping_cart/templates/shopping_cart/cart.html
@@ -1,7 +1,74 @@
 {% extends "user_profile/header.html" %}
 
 {% block content %}
-<p>This is my shopping Cart!</p>
+<div class="col-xs-6">
+    <h2><span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</h2>
+</div>
+{% for cart in Cart %}
+
+<!-- <div class="container-fluid">
+    <div class="item">
+        <div class="button">
+            <button class="btn btn-danger">Delete</button>
+            <span>{{ cart.product }}</span>
+            <span>{{ cart.subtotal }}</span>
+        </div>
+        <div class="finaltotal">
+          <span>{{ cart.final_total }}</span>
+        </div>
+    </div>
+</div> -->
+
+<div class="container-fluid">
+    <div class="panel-title">
+		<div class="row">
+			<div class="col-xs-6">
+				<button type="button" class="btn btn-primary btn-sm btn-block">
+					<span class="glyphicon glyphicon-share-alt"></span> Continue shopping
+				</button>
+			</div>
+		</div>
+	</div>
+    <hr>
+	<div class="panel-body">
+		<div class="row">
+			<div class="col-xs-2"><img class="img-responsive" src="http://placehold.it/100x70">
+			</div>
+			<div class="col-md-6">
+                 <h4 class="product-name"><strong>{{cart.product}} </strong></h4>
+                 <h4><small>Price: ${{cart.subtotal}}</small></h4>
+			</div>
+			<!-- <div class="col-xs-6"> -->
+				<!-- <div class="col-xs-6 text-right">
+					<h6><strong>25.00 <span class="text-muted">x</span></strong></h6>
+				</div> -->
+				<!-- <div class="col-xs-4">
+					<input type="text" class="form-control input-sm" value="1">
+				</div> -->
+				<!-- <div class="col-xs-2">
+					<button type="button" class="btn btn-link btn-xs">
+						<span class="glyphicon glyphicon-trash"> </span>
+					</button>
+				</div> -->
+			<!-- </div> -->
+		</div>
+		<hr>
+	</div>
+	<div class="panel-footer">
+		<div class="row text-center">
+			<div class="col-xs-9" style="margin-right: 30px;">
+				<h4 class="text-right">Total: <strong>${{cart.final_total}}</strong></h4>
+             </div>
+			<div class="col-xs-3">
+				<button type="button" class="btn btn-primary btn-block">
+					Checkout
+				</button>
+			</div>
+		</div>
+    </div>
+</div>
+
+{% endfor %}
 
 
 {% endblock %}
