Refactor post model and reroute url using slugs

--- a/bns/listings/templates/listings/post.html
+++ b/bns/listings/templates/listings/post.html
@@ -3,7 +3,7 @@
 {% block content %}
 <br>
 <div>
-    {% for listing in Listings %}
+    {% for listing in Listing %}
     <div class="container-fluid">
         <div class="card" style="background-color: #e3f2fd;">
             <div class="card-header">
@@ -13,9 +13,7 @@
             <h5>Price: ${{ listing.price }}  </h5>
             <p class="card-text">{{ listing.description }} </p>
             <div class="card-footer">Posted on: {{ listing.date }}
-                <a href='{{ listing.get_absolute_url }}'>
-                    <button class="btn btn-primary" style="float:right;text-align:right;margin-left: 80px; margin-top: -8px;">View Item</button>
-                </a>
+                <button class="btn btn-primary" style="float:right;text-align:right;margin-left: 80px; margin-top: -8px;">Add to Cart</button>
             </div>
             </div>
         </div>
