--- a/bns/user_profile/templates/user_profile/header.html
+++ b/bns/user_profile/templates/user_profile/header.html
@@ -18,8 +18,8 @@
 		}
 	</style>
 </head>
-
-<body class="body" style="background-color:azure">
+<!-- style="background-color:azure" -->
+<body class="body">
 	<div class="container-fluid" style="min-height:95%; ">
 		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
 			<a class="navbar-brand" href="/">Buying n' Selling</a>
