--- a/bns/user_profile/templates/user_profile/home.html
+++ b/bns/user_profile/templates/user_profile/home.html
@@ -15,7 +15,7 @@
     <br>
 </div>
 <div>
-    {% for listing in Listings %}
+    <!-- {% for listing in Listings %}
     <div class="container-fluid">
         <div class="card" style="background-color: #e3f2fd;">
             <div class="card-header">
@@ -29,7 +29,7 @@
         </div>
     </div>
     <br>
-    {% endfor %}
+    {% endfor %} -->
 </div>
 
 {% endblock %}
