add functionality to shopping cart allowing for adding and removing items

--- a/bns/user_profile/templates/user_profile/header.html
+++ b/bns/user_profile/templates/user_profile/header.html
@@ -50,7 +50,7 @@
 				<div class="input-group" style="margin-right: 450px;">
 					<input type="text" class="form-control" name="q" placeholder="Search for...">
 					<span class="input-group-btn" >
-						<button class="btn btn-default" type="button"><b class="glyphicon glyphicon-search"></b></button>
+						<button class="btn btn-default" action='/s/' type="submit"><b class="glyphicon glyphicon-search"></b></button>
 					</span>
 				</div>
 			  </form>
