--- a/bns/user_profile/templates/user_profile/home.html
+++ b/bns/user_profile/templates/user_profile/home.html
@@ -1,6 +1,15 @@
 {% extends "user_profile/header.html" %}
 
 {% block content %}
+
+<style>
+    .centered {
+        text-align: center;
+        margin-top: 20%;
+}
+
+</style>
+
 <div>
     <br>
     <center>
@@ -14,6 +23,8 @@
     </center>
     <br>
 </div>
+<h2 class="centered">Welcome to Buying and Selling!</h2>
+
 <div>
     <!-- {% for listing in Listings %}
     <div class="container-fluid">
