--- a/bns/listings/templates/listings/single.html
+++ b/bns/listings/templates/listings/single.html
@@ -12,7 +12,9 @@
             <h5>Price: ${{ Listing.price }}  </h5>
             <p class="card-text">{{ Listing.description }} </p>
             <div class="card-footer">Posted on: {{ Listing.date }}
+                <a href='{% url "update_cart" Listing.slug %}'>
                 <button class="btn btn-primary" style="float:right;text-align:right;margin-left: 80px; margin-top: -8px;">Add to Cart</button>
+                </a>
             </div>
             </div>
         </div>
