--- a/bns/shopping_cart/templates/shopping_cart/cart.html
+++ b/bns/shopping_cart/templates/shopping_cart/cart.html
@@ -1,23 +1,23 @@
 {% extends "user_profile/header.html" %}
 
 {% block content %}
+
+<style>
+	.centered {
+		text-align: center;
+		margin-top: 20%;
+	}
+</style>
+
+{% if Empty or Cart.subtotal == 0.00 %}
+<!-- <center> -->
+	<h2 class="centered">{{ Empty_Message }}</h2>
+<!-- </center> -->
+
+{% else %}
 <div class="col-xs-6">
     <h2><span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</h2>
 </div>
-{% for item in Cart.items.all %}
-
-<!-- <div class="container-fluid">
-    <div class="item">
-        <div class="button">
-            <button class="btn btn-danger">Delete</button>
-            <span>{{ cart.product }}</span>
-            <span>{{ cart.subtotal }}</span>
-        </div>
-        <div class="finaltotal">
-          <span>{{ cart.final_total }}</span>
-        </div>
-    </div>
-</div> -->
 
 <div class="container-fluid">
     <div class="panel-title">
@@ -31,44 +31,40 @@
 	</div>
     <hr>
 	<div class="panel-body">
-		<div class="row">
-			<div class="col-xs-2"><img class="img-responsive" src="http://placehold.it/100x70">
+		<div class="row">			
+			{% for item in Cart.items.all %}
+
+			<div class="col-sm-1">
+				<div class="col-xs-3"><img class="img-responsive" src="http://placehold.it/100x70">
+				</div>
 			</div>
-			<div class="col-md-6">
-                 <h4 class="product-name"><strong>{{item}} </strong></h4>
-                 <h4><small>Price: ${{item.price}}</small></h4>
+			<div class="col-sm-11">
+				<h4 class="product-name"><strong>{{item}} </strong></h4>
+				<h4><small>Price: ${{item.price}}</small>
+				<a href='{% url "update_cart" item.slug %}'>
+					<button class="btn btn-danger">Delete</button>
+				</a>
+				</h4>
 			</div>
-			<!-- <div class="col-xs-6"> -->
-				<!-- <div class="col-xs-6 text-right">
-					<h6><strong>25.00 <span class="text-muted">x</span></strong></h6>
-				</div> -->
-				<!-- <div class="col-xs-4">
-					<input type="text" class="form-control input-sm" value="1">
-				</div> -->
-				<!-- <div class="col-xs-2">
-					<button type="button" class="btn btn-link btn-xs">
-						<span class="glyphicon glyphicon-trash"> </span>
-					</button>
-				</div> -->
-			<!-- </div> -->
+
+			{% endfor %}
+
 		</div>
 		<hr>
 	</div>
 	<div class="panel-footer">
 		<div class="row text-center">
 			<div class="col-xs-9" style="margin-right: 30px;">
-				<h4 class="text-right">Total: <strong>${{Cart.subtotal}}</strong></h4>
-             </div>
+				<h4 class="text-right">Subtotal:${{Cart.subtotal}}</h4>
+				<h4 class="text-right">Tax: 0.0875%</h4>
+				<h4 class="text-right">Total:${{Cart.final_total}}</h4>
+			 </div>
 			<div class="col-xs-3">
-				<button type="button" class="btn btn-primary btn-block">
-					Checkout
-				</button>
+			<button type="button" class="btn btn-primary btn-block">Checkout</button>
 			</div>
 		</div>
     </div>
 </div>
 
-{% endfor %}
-
-
+{% endif %}
 {% endblock %}
